<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.danteyu.studio.artbooktesting.ui.artDetails.ArtDetailsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_16">

        <ImageView
            android:id="@+id/artDetail_img"
            imgUrl="@{viewModel.imageUrl}"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/space_16"
            android:onClick="@{_ -> viewModel.onSearchArtNavigated()}"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/art_name_txt_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_48"
            android:layout_marginTop="@dimen/space_24"
            android:hint="@string/enter_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artDetail_img">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusForward="@id/art_artist_txt_field"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/art_artist_txt_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:hint="@string/enter_artist"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/art_name_txt_field"
            app:layout_constraintStart_toStartOf="@id/art_name_txt_field"
            app:layout_constraintTop_toBottomOf="@id/art_name_txt_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/artist_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/art_year_txt_field"
                android:text="@={viewModel.artist}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/art_year_txt_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:hint="@string/enter_year"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/art_name_txt_field"
            app:layout_constraintStart_toStartOf="@id/art_name_txt_field"
            app:layout_constraintTop_toBottomOf="@id/art_artist_txt_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={viewModel.year}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:onClick="@{_ -> viewModel.makeArt()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/art_year_txt_field" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
